# normal

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  pixi.toml  pyproject.toml
Normal/: __init__.py
Normal/tests/: test_distribution.py
